[package]
name = "vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Project-aware development environment tool"
repository = "https://github.com/goobits/vm"
homepage = "https://github.com/goobits/vm"
keywords = ["development", "docker", "vm", "devenv"]
categories = ["development-tools"]
publish = true  # Override workspace publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
shellexpand = "3.1.0"
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
dialoguer = { workspace = true }
sysinfo = { workspace = true, features = ["serde"] }
vm-core = { path = "../vm-core" }
vm-logging = { path = "../vm-logging" }
vm-messages = { path = "../vm-messages" }
vm-cli = { path = "../vm-cli" }
vm-config = { path = "../vm-config" }
vm-platform = { path = "../vm-platform" }
vm-plugin = { path = "../vm-plugin" }
vm-provider = { path = "../vm-provider" }
vm-temp = { path = "../vm-temp" }
vm-package-server = { path = "../vm-package-server" }
vm-auth-proxy = { path = "../vm-auth-proxy" }
vm-docker-registry = { path = "../vm-docker-registry" }
futures = "0.3.31"
chrono = "0.4.42"
rand = { workspace = true }

[features]
default = []
structured-output = []
integration = []

[package.metadata.cargo-machete]
ignored = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"