[package]
name = "hello-world"
version = "1.0.0"
edition = "2021"
authors = ["Test Author <test@example.com>"]
description = "A simple hello world package for testing"
license = "MIT"
repository = "https://github.com/example/hello-world"

# Prevent this test fixture from being included in parent workspace
[workspace]